[gd_scene load_steps=9 format=3 uid="uid://bdo1b35pd3yxa"]

[ext_resource type="Script" uid="uid://cquaiooyeicxx" path="res://components/interface/notifier/notifier.gd" id="1_4pi3n"]
[ext_resource type="FontFile" uid="uid://sja5jpfqrgol" path="res://fonts/PixelGame-R9AZe.otf" id="1_54i3o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4pi3n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_54i3o"]
bg_color = Color(0.113725, 0.113725, 0.113725, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4pi3n"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="Animation" id="Animation_e03yv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(43, 53)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4pi3n"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-96, 26), Vector2(43, 26)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w1vhp"]
_data = {
&"RESET": SubResource("Animation_e03yv"),
&"default": SubResource("Animation_4pi3n")
}

[node name="Notifier" type="CanvasLayer"]
script = ExtResource("1_4pi3n")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.823529)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -672.0
offset_top = -298.0
offset_right = 394.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.796078, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_54i3o")
theme_override_font_sizes/font_size = 91
text = "Woah there friend!"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_54i3o")
theme_override_font_sizes/font_size = 40
text = "If even the slightest flashing might bother you, you can disable it in settings. Just this once, I’ll do it for you. This popup appears only once—deal?

Whatcha say?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -351.0
offset_top = 86.0
offset_right = 351.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Disable" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_54i3o")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_4pi3n")
theme_override_styles/disabled = SubResource("StyleBoxFlat_54i3o")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_4pi3n")
theme_override_styles/hover = SubResource("StyleBoxFlat_4pi3n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_54i3o")
theme_override_styles/normal = SubResource("StyleBoxFlat_54i3o")
text = "DISABLE FLASHING"

[node name="Ignore" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_54i3o")
theme_override_font_sizes/font_size = 33
theme_override_styles/focus = SubResource("StyleBoxEmpty_4pi3n")
theme_override_styles/disabled = SubResource("StyleBoxFlat_54i3o")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_4pi3n")
theme_override_styles/hover = SubResource("StyleBoxFlat_4pi3n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_54i3o")
theme_override_styles/normal = SubResource("StyleBoxFlat_54i3o")
text = "NO THANKS"

[node name="Back" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_54i3o")
theme_override_font_sizes/font_size = 33
theme_override_styles/focus = SubResource("StyleBoxEmpty_4pi3n")
theme_override_styles/disabled = SubResource("StyleBoxFlat_54i3o")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_4pi3n")
theme_override_styles/hover = SubResource("StyleBoxFlat_4pi3n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_54i3o")
theme_override_styles/normal = SubResource("StyleBoxFlat_54i3o")
text = "Return to title"

[node name="WarningAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_w1vhp")
}
autoplay = "default"

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="pressed" from="VBoxContainer2/Disable" to="." method="_on_disable_pressed"]
[connection signal="pressed" from="VBoxContainer2/Ignore" to="." method="_on_ignore_pressed"]
[connection signal="pressed" from="VBoxContainer2/Back" to="." method="_on_back_pressed"]
[connection signal="animation_finished" from="WarningAnim" to="." method="_on_warning_anim_animation_finished"]
